# cuda-fluidsim

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  capture-fields.sh  fsim.config  fsim.py  log.txt  main.cu  out.txt  ppm_main.cpp  vidgen.sh
include/: array_utils.h  array_utils.hpp  backups.h  backups.hpp  config_reader.h  config_reader.hpp  data_server.h  data_server.hpp  defs.h  device_utils.h  devptr.h  errors.h  errors.hpp  finite_difference.cuh  fsim_manager.cuh  fsim_utils.hpp  img_thread.h  log.h  log.hpp  ppm_handler.h  ppm_handler.hpp  sim_params.h  sim_params.hpp
include/fsim/: finite_difference.cuh  fsim_manager.cuh  sim_params.h
include/io/: backups.h  config_reader.h  log.h  ppm_handler.h
include/utils/: array_utils.h  device_utils.h  devptr.h
python/: read_scalar.py  receiver.py
src/: array_utils.cpp  backups.cpp  config_reader.cpp  data_server.cpp  device_utils.cu  devptr.cpp  errors.cpp  finite_difference.cu  fsim_manager.cu  fsim_utils.cpp  img_thread.cpp  log.cpp  ppm_handler.cpp  sim_params.cpp
tests/: array_utils_test.cpp
